--- a/README
+++ b/README
@@ -1,17 +1,12 @@
-iPXE README File
+## iPXE 
 
-Quick start guide:
+### 直接在 ubuntu/debian 系统编译
 
-   cd src
-   make
+```bash
+./build_ipxe.sh
+```
+
+### 成品在 ipxe/products 下面
 
 
-make bin/ipxe.iso
-make bin/ipxe.usb
-make bin/undionly.kpxe
-
-make bin/undionly.kpxe EMBED=script.ipxe
-ubuntu20.04环境依赖
-sudo apt install -y git wget gcc make binutils perl liblzma-dev mtools genisoimage syslinux
-
-For any more detailed instructions, see http://ipxe.org
+### 统一使用菜单文件是 menu.ipxe
